tests/invalid/try_bad_params.err_exp
try_bad_params.m:008: Error: no clauses for predicate `main'/2.
try_bad_params.m:020: Duplicate io try parameter.
try_bad_params.m:026: Error: no clauses for predicate `main_2'/2.
try_bad_params.m:029: Error: invalid try goal parameter `bloop'.
try_bad_params.m:038: In clause for predicate `main_3'/2:
try_bad_params.m:038:   in initial I/O state variable of try goal:
try_bad_params.m:038:   type error: variable `STATE_VARIABLE_Int_0' has type
try_bad_params.m:038:   `int',
try_bad_params.m:038:   expected type was `io.state'.
try_bad_params.m:038: In clause for predicate `main_3'/2:
try_bad_params.m:038:   in final I/O state variable of try goal:
try_bad_params.m:038:   type error: variable `STATE_VARIABLE_Int' has type
try_bad_params.m:038:   `int',
try_bad_params.m:038:   expected type was `io.state'.
try_bad_params.m:044: Error: no clauses for predicate `main_4'/1.
try_bad_params.m:047: Error: the argument of io should be a state variable.
try_bad_params.m:053: Error: no clauses for predicate `main_5'/2.
try_bad_params.m:056: Error: io takes exactly one argument, which should be a
try_bad_params.m:056:   state variable name.
For more information, recompile with `-E'.
